Mse en place d'un controlleur pour IndexBundle

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,7 @@
 #_internal:
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
 #   prefix:   /_internal
+
+MuzichIndexBundle:
+  resource: "@MuzichIndexBundle/Resources/config/routing.yml"
+  prefix: /
