--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -6,7 +6,7 @@
     database_host="localhost"
     database_port="5432"
     database_name="muzich"
-    database_user="muzich_user"
+    database_user="muzich"
     database_password="toto"
     mailer_transport="smtp"
     mailer_host="localhost"
