Mise en place du système login/register sur la page d'accueil, avec redirection dessus si pas identifié. +: Réutilisation du code de FOS pour déplacer sur la page / (index) le formulaire de login, et le formulaire d'inscription.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,3 +6,7 @@
 MuzichIndexBundle:
   resource: "@MuzichIndexBundle/Resources/config/routing.yml"
   prefix: /
+
+MuzichHomeBundle:
+  resource: "@MuzichHomeBundle/Resources/config/routing.yml"
+  prefix: /
