--- a/src/Muzich/CoreBundle/Resources/config/security.yml
+++ b/src/Muzich/CoreBundle/Resources/config/security.yml
@@ -6,25 +6,30 @@ security:
 
     firewalls:
         main:
-            pattern:      .*
+            pattern:      ^/
             form_login:
                 provider:       fos_userbundle
-                login_path:     /login
+                login_path:     /hello
                 use_forward:    false
                 check_path:     /login_check
                 failure_path:   null
-                default_target_path: /
+                default_target_path: /hello
             logout:
                 path:   /logout
-                target: /
-            anonymous:  true
+                target: /hello
+            anonymous:  ~
             
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
+      # Attention, pas sur de ces lignes là !
+        ROLE_USER:        ROLE_USER
+        ROLE_ADMIN:       ROLE_ADMIN
+        ROLE_SUPER_ADMIN: ROLE_SUPER_ADMIN
         
     ## La en tant qu'exemple, exploiter ça (http://j-place.developpez.com/tutoriels/php/ameliorez-vos-applications-developpees-avec-symfony2/#LVI-A-3)
-#    access_control:
+    access_control:
+        - { path: ^/hello, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: ROLE_USER }
 #        # Liste des pages accessibles à tous les utilisateurs (ne pas toucher)
 #        - { path: ^/_wdt/, role: IS_AUTHENTICATED_ANONYMOUSLY }
 #        - { path: ^/_profiler/, role: IS_AUTHENTICATED_ANONYMOUSLY }
@@ -43,3 +48,27 @@ security:
 #
 #        # PAGES ACCESSIBLES À TOUS
 #        - { path: ^/myapp.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+
+#security:
+#    firewalls:
+#        secured_area:
+#            pattern:    ^/
+#            anonymous: ~
+#            form_login:
+#                login_path:  /login
+#                check_path:  /login_check
+#            logout:
+#                path:   /logout
+#                target: /hello
+#
+#    access_control:
+#        - { path: ^/admin, roles: ROLE_ADMIN }
+#
+#    providers:
+#        in_memory:
+#            users:
+#                ryan:  { password: ryanpass, roles: 'ROLE_USER' }
+#                admin: { password: kitten, roles: 'ROLE_ADMIN' }
+#
+#    encoders:
+#        Symfony\Component\Security\Core\User\User: plaintext
