Mise en place du formulaire de recherche de tag, travaillant avec l'objet de recherche d'elements.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,6 +3,10 @@
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
 #   prefix:   /_internal
 
+MuzichCoreBundle:
+  resource: "@MuzichCoreBundle/Resources/config/routing.yml"
+  prefix: /
+  
 MuzichIndexBundle:
   resource: "@MuzichIndexBundle/Resources/config/routing.yml"
   prefix: /
