--- a/src/Muzich/MynetworkBundle/Resources/config/routing.yml
+++ b/src/Muzich/MynetworkBundle/Resources/config/routing.yml
@@ -2,3 +2,8 @@
 mynetwork_index:
   pattern:  /my-network
   defaults: { _controller: MuzichMynetworkBundle:Mynetwork:index }
+  
+mynetwork_search:
+  pattern:  /my-network/search
+  defaults: { _controller: MuzichMynetworkBundle:Mynetwork:search }
+  
