Ecriture de l'action permettant de suivre / ne plus suivre.

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -3,4 +3,9 @@
 search_elements:
    pattern:  /search-elements
    defaults: { _controller: MuzichCoreBundle:Search:searchElements }
+   
+follow:
+   pattern:  /follow/{type}/{id}/{token}
+   defaults: { _controller: MuzichCoreBundle:Core:follow }
+   
      
