Mise a plat du code d'inscription. Debut d'écriture de la page d'arrivée après inscriptionb.

--- a/src/Muzich/UserBundle/Resources/config/routing.yml
+++ b/src/Muzich/UserBundle/Resources/config/routing.yml
@@ -8,3 +8,11 @@ change_password:
   pattern: /account/change-password
   defaults: { _controller: MuzichUserBundle:User:changePassword }
   
+register:
+  pattern: /register/do
+  defaults: { _controller: MuzichUserBundle:User:register }
+  
+register_finish:
+  pattern: /register/finish
+  defaults: { _controller: MuzichUserBundle:User:registerFinish }
+  
