Sur la page start: Mise en place du formulaire de gestion des tags favoris.

--- a/src/Muzich/UserBundle/Resources/config/routing.yml
+++ b/src/Muzich/UserBundle/Resources/config/routing.yml
@@ -16,3 +16,7 @@ start:
   pattern: /start
   defaults: { _controller: MuzichUserBundle:User:start }
   
+update_tag_favorites:
+  pattern: /account/update-tag-favorites/{redirect}
+  defaults: { _controller: MuzichUserBundle:User:updateTagFavorites, redirect: home }
+    
