--- a/src/Muzich/CoreBundle/Resources/config/security.yml
+++ b/src/Muzich/CoreBundle/Resources/config/security.yml
@@ -29,6 +29,7 @@ security:
     access_control:
         - { path: ^/hello, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: ROLE_USER }
 #        # Liste des pages accessibles à tous les utilisateurs (ne pas toucher)
 #        - { path: ^/_wdt/, role: IS_AUTHENTICATED_ANONYMOUSLY }
@@ -38,7 +39,6 @@ security:
 #        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
 #        - { path: ^/login_check$, role: IS_AUTHENTICATED_ANONYMOUSLY }
 #        - { path: ^/register$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-#        - { path: ^/resseting$, role: IS_AUTHENTICATED_ANONYMOUSLY }
 #        
 #        # PAGES ACCESSIBLES AUX ADMINISTRATEURS
 #        - { path: ^/myapp/admin/, role: ROLE_ADMIN }
