--- a/src/Muzich/IndexBundle/Resources/config/routing.yml
+++ b/src/Muzich/IndexBundle/Resources/config/routing.yml
@@ -10,16 +10,20 @@ fos_user_security:
 
 fos_user_profile:
     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
-    prefix: /profile
+    prefix: /{_locale}/profile/
+    defaults: { _locale: fr }
 
 fos_user_register:
     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
-    prefix: /register
+    prefix: /{_locale}/register/
+    defaults: { _locale: fr }
 
 fos_user_resetting:
     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
-    prefix: /resetting
+    prefix: /{_locale}/resetting
+    defaults: { _locale: fr }
 
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
-    prefix: /change-password 
+    prefix: /{_locale}/change-password/
+    defaults: { _locale: fr }
