--- a/src/Muzich/CoreBundle/Resources/config/security.yml
+++ b/src/Muzich/CoreBundle/Resources/config/security.yml
@@ -9,11 +9,12 @@ security:
             pattern:      ^/
             form_login:
                 provider:       fos_userbundle
-                login_path:     /hello
+                login_path:     index
                 use_forward:    false
                 check_path:     /login_check
                 failure_path:   null
-                default_target_path: /hello
+                default_target_path: home
+                
             logout:
                 path:   /logout
                 target: /hello
@@ -27,9 +28,11 @@ security:
         
     ## La en tant qu'exemple, exploiter ça (http://j-place.developpez.com/tutoriels/php/ameliorez-vos-applications-developpees-avec-symfony2/#LVI-A-3)
     access_control:
-        - { path: ^/hello, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: "^/hello", roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: "^/hello/(?:fr|en)", roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/(?:fr|en)/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: "^/(?:fr|en)/resetting", roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: "^/change-language/(?:fr|en)", roles: IS_AUTHENTICATED_ANONYMOUSLY }
         
         
         - { path: ^/_wdt/, role: IS_AUTHENTICATED_ANONYMOUSLY }
@@ -38,10 +41,11 @@ security:
         - { path: ^/css/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/bundles/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login_check$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        
         - { path: ^/, roles: ROLE_USER }
 #        # Liste des pages accessibles à tous les utilisateurs (ne pas toucher)
-#        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-#        - { path: ^/login_check$, role: IS_AUTHENTICATED_ANONYMOUSLY }
 #        - { path: ^/register$, role: IS_AUTHENTICATED_ANONYMOUSLY }
 #        
 #        # PAGES ACCESSIBLES AUX ADMINISTRATEURS
