Ajout des Bundles: whiteoctober/Pagerfanta.git, whiteoctober/WhiteOctoberPagerfantaBundle.git, whiteoctober/WhiteOctoberAdminBundle.git

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@
 [submodule "vendor/bundles/Stof/DoctrineExtensionsBundle"]
 	path = vendor/bundles/Stof/DoctrineExtensionsBundle
 	url = git://github.com/stof/StofDoctrineExtensionsBundle.git
+[submodule "vendor/bundles/WhiteOctober/AdminBundle"]
+	path = vendor/bundles/WhiteOctober/AdminBundle
+	url = git://github.com/whiteoctober/WhiteOctoberAdminBundle.git
+[submodule "vendor/pagerfanta"]
+	path = vendor/pagerfanta
+	url = git://github.com/whiteoctober/Pagerfanta.git
+[submodule "vendor/bundles/WhiteOctober/PagerfantaBundle"]
+	path = vendor/bundles/WhiteOctober/PagerfantaBundle
+	url = git://github.com/whiteoctober/WhiteOctoberPagerfantaBundle.git
