--- a/src/Muzich/CoreBundle/Resources/config/security.yml
+++ b/src/Muzich/CoreBundle/Resources/config/security.yml
@@ -1,4 +1,7 @@
-
+parameters:
+    # ... other parameters
+    security.acl.permission.map.class: Sonata\AdminBundle\Security\Acl\Permission\AdminPermissionMap
+    
 security:
     providers:
         fos_userbundle:
@@ -6,7 +9,7 @@ security:
 
     firewalls:
         main:
-            pattern:      ^/
+            pattern:      .*
             form_login:
                 provider:       fos_userbundle
                 login_path:     index
@@ -20,11 +23,18 @@ security:
                 target: /hello
             anonymous:  ~
             
-    role_hierarchy:
+    #role_hierarchy:
       # Attention, pas sur de ces lignes là !
-        ROLE_USER:        ROLE_USER
-        ROLE_ADMIN:       ROLE_ADMIN
-        ROLE_SUPER_ADMIN: ROLE_SUPER_ADMIN
+        #ROLE_USER:        ROLE_USER
+        #ROLE_ADMIN:       ROLE_ADMIN
+        #ROLE_SUPER_ADMIN: ROLE_SUPER_ADMIN
+        
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_SONATA_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        
+    acl:
+        connection: default
         
     ## La en tant qu'exemple, exploiter ça (http://j-place.developpez.com/tutoriels/php/ameliorez-vos-applications-developpees-avec-symfony2/#LVI-A-3)
     access_control:
@@ -34,9 +44,12 @@ security:
         - { path: "^/(?:fr|en)/resetting", roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: "^/change-language/(?:fr|en)", roles: IS_AUTHENTICATED_ANONYMOUSLY }
         
+        # PAGES ACCESSIBLES AUX ADMINISTRATEURS
+        - { path: ^/admin, role: IS_AUTHENTICATED_ANONYMOUSLY }
         
         - { path: ^/_wdt/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/_profiler/, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        
         - { path: ^/js/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/css/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/bundles/, role: IS_AUTHENTICATED_ANONYMOUSLY }
