Procédure de mise a jour d'un groupe.

--- a/src/Muzich/GroupBundle/Resources/config/routing.yml
+++ b/src/Muzich/GroupBundle/Resources/config/routing.yml
@@ -1,8 +1,16 @@
 
 groups_own_list:
-    pattern:  /my-groups
-    defaults: { _controller: MuzichGroupBundle:Default:myList }
+  pattern:  /my-groups
+  defaults: { _controller: MuzichGroupBundle:Default:myList }
 
 group_add:
-    pattern:   /my-groups/add
-    defaults: { _controller: MuzichGroupBundle:Default:add }
+  pattern:   /my-groups/add
+  defaults: { _controller: MuzichGroupBundle:Default:add }
+    
+group_edit:
+  pattern:   /group/{slug}/edit
+  defaults: { _controller: MuzichGroupBundle:Default:edit }
+    
+group_update:
+  pattern:   /group/{slug}/update
+  defaults: { _controller: MuzichGroupBundle:Default:update }
