Ajout de tests sur l'ajout d'élément.

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -16,3 +16,6 @@ monolog:
             type:  stream
             path:  %kernel.logs_dir%/%kernel.environment%.log
             level: debug
+
+parameters:
+    env: prod
