--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -15,8 +15,10 @@
 
     <testsuites>
         <testsuite name="Project Test Suite">
-            <directory>../src/*/*Bundle/Tests</directory>
-            <directory>../src/*/Bundle/*Bundle/Tests</directory>
+            <!--<directory>../src/*/*Bundle/Tests</directory>-->
+            <directory>../src/Muzich/CoreBundle/Tests/Controller</directory>
+            <directory>../src/Muzich/CoreBundle/Tests/ElementFactory</directory>
+            <directory>../src/Muzich/CoreBundle/Tests/Searcher</directory>
         </testsuite>
     </testsuites>
 
@@ -26,6 +28,7 @@
     </php>
     -->
 
+    <!--
     <filter>
         <whitelist>
             <directory>../src</directory>
@@ -37,5 +40,6 @@
             </exclude>
         </whitelist>
     </filter>
+    -->
 
 </phpunit>
