--- a/src/Muzich/FavoriteBundle/Resources/config/routing.yml
+++ b/src/Muzich/FavoriteBundle/Resources/config/routing.yml
@@ -2,6 +2,10 @@
 favorite_add:
   pattern:   /favorite/add/{id}/{token}
   defaults: { _controller: MuzichFavoriteBundle:Favorite:add }
+  
+favorite_remove:
+  pattern:   /favorite/remove/{id}/{token}
+  defaults: { _controller: MuzichFavoriteBundle:Favorite:remove }
 
 favorites_my_list:
   pattern:   /favorites
