Réécriture de la requete de récupération des éléments.

--- a/src/Muzich/HomeBundle/Resources/config/routing.yml
+++ b/src/Muzich/HomeBundle/Resources/config/routing.yml
@@ -5,7 +5,7 @@ home:
   defaults: { _controller: MuzichHomeBundle:Home:index }
   
 home_more:
-  pattern:  /{count}
+  pattern:  /more/{count}
   defaults: { _controller: MuzichHomeBundle:Home:index, count: null }
   
 show_user:
