Evolution #59: Modifier le script tags en ajax La recherche de tag est en ajax. Les formulaire et leurs traitement ont été adaptés.

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -11,3 +11,11 @@ follow:
 element_add:
   pattern:  /element/add/{group_slug}
   defaults: { _controller: MuzichCoreBundle:Core:elementAdd, group_slug: null }
+
+search_tag:
+  pattern: /search/tag/{string_search}
+  defaults: { _controller: MuzichCoreBundle:Search:searchTag, string_search: null }
+  
+search_tag_ig_by_name:
+  pattern: /search/tagid/{string_search}
+  defaults: { _controller: MuzichCoreBundle:Search:searchTagId, string_search: null }
