Evolution #88: Annoncé tout les sites supportés

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -49,6 +49,10 @@ info_about:
 info_development:
   pattern: /info/development
   defaults: { _controller: MuzichCoreBundle:Info:development }
+
+info_sites:
+  pattern: /info/sites
+  defaults: { _controller: MuzichCoreBundle:Info:sites }
   
 ####
 
