--- a/src/Muzich/FavoriteBundle/Resources/config/routing.yml
+++ b/src/Muzich/FavoriteBundle/Resources/config/routing.yml
@@ -16,5 +16,5 @@ favorite_user_list:
   defaults: { _controller: MuzichFavoriteBundle:Favorite:userList }
 
 favorite_get:
-  pattern:   /favorites/{user_id}/getElements/{tags_ids_json}/{id_limit}/{invert}
+  pattern:   /favoritesajax/{user_id}/getElements/{tags_ids_json}/{id_limit}/{invert}
   defaults: { _controller: MuzichFavoriteBundle:Favorite:getElements, id_limit: null, invert: false }
