fix: une url était en hardcore pour la recherche de tag (js)

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -26,7 +26,7 @@ element_add:
 
 search_tag:
   pattern: /search/tag/{string_search}/{timestamp}
-  defaults: { _controller: MuzichCoreBundle:Search:searchTag, string_search: null }
+  defaults: { _controller: MuzichCoreBundle:Search:searchTag, string_search: null, timestamp: null }
   
 search_tag_ig_by_name:
   pattern: /search/tagid/{string_search}
