Ajout de la fonctionnalité "ajouter un tag".  - Transparence pour l'utilisateur  - Modification de l'entité Tag (ajout de deux champs)

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -44,6 +44,11 @@ ajax_get_favorites_tags:
   pattern: /ajax/my-favorites-tags
   defaults: { _controller: MuzichCoreBundle:Core:getFavoriteTags }
 
+ajax_add_tag:
+  pattern: /ajax/add-tag/{name}
+  defaults: { _controller: MuzichCoreBundle:Core:addTag, name: null }
+  
+
 ####
 
 info_about:
